# ECF

./: CMakeLists.txt
ECF/: AlgAEliGPEA.h  AlgAEliGPEA2.h  AlgClonalg.cpp  AlgCuckooSearch.cpp  AlgDifferentialEvolution.cpp  AlgElimination.cpp  AlgEvolutionStrategy.cpp  AlgGenHookeJeeves.cpp  AlgGeneticAnnealing.cpp  AlgNSGA2.cpp  AlgNSGA2.h  AlgOptIA.cpp  AlgParticleSwarmOptimization.cpp  AlgRouletteWheel.cpp  AlgSGenGPEA.cpp  AlgSGenGPEA.h  AlgSteadyStateTournament.cpp  Algorithm.cpp  Crossover.cpp  Deme.cpp  ECF.h  Fitness.h  FitnessMax.cpp  FitnessMax.h  FitnessMin.cpp  FitnessMin.h  Genotype.h  HallOfFame.cpp  Individual.cpp  Individual.h  MOFitness.cpp  MOFitness.h  Migration.cpp  ParallelAlgorithm.h  Population.cpp  Registry.h  State.cpp  State.h  TermMaxEvalOp.h  main.cpp
ECF/apgenotype/: APGenotype.cpp  APGenotype.h  PrimitiveSetAP.cpp  PrimitiveSetAP.h
ECF/binary/: Binary.h  BinaryCrsHalfUniform.cpp  BinaryCrsMasked.cpp  BinaryCrsNonGeometric.cpp  BinaryCrsOnePoint.cpp  BinaryCrsRandomRespectful.cpp  BinaryCrsReducedSurrogate.cpp  BinaryCrsSegmented.cpp  BinaryCrsShuffle.cpp  BinaryCrsTwoPoint.cpp  BinaryCrsUniform.cpp  BinaryMutMix.cpp  BinaryMutSimple.cpp
ECF/bitstring/: BitString.h  BitStringCrsOnePoint.cpp  BitStringCrsUniform.cpp  BitStringMutMix.cpp  BitStringMutSimple.cpp
ECF/cartesian/: Cartesian.cpp  CartesianCrsOnePoint.cpp  CartesianCrsOnePoint.h  CartesianMutOnePoint.cpp  CartesianMutOnePoint.h  Cartesian_c.h  Function.h  FunctionSet.h
ECF/floatingpoint/: FloatingPoint.h  FloatingPointCrsArithmetic.cpp  FloatingPointCrsArithmeticSimple.cpp  FloatingPointCrsArithmeticSingle.cpp  FloatingPointCrsAverage.cpp  FloatingPointCrsBga.cpp  FloatingPointCrsBlx.cpp  FloatingPointCrsBlxAlpha.cpp  FloatingPointCrsBlxAlphaBeta.cpp  FloatingPointCrsDiscrete.cpp  FloatingPointCrsFlat.cpp  FloatingPointCrsHeuristic.cpp  FloatingPointCrsLocal.cpp  FloatingPointCrsOnePoint.cpp  FloatingPointCrsRandom.cpp  FloatingPointCrsSbx.cpp  FloatingPointMutSimple.cpp
ECF/tree/: Exp.cpp  (+24 more)
examples/APSymbReg/: CMakeLists.txt  SymbRegEvalOp.cpp  SymbRegEvalOpAP.cpp  SymbRegEvalOpAP.h  main.cpp
examples/APSymbReg/utility/: utilityrng.h
examples/GEPSymbReg/: CMakeLists.txt  SymbRegEvalOp.cpp  SymbRegEvalOpGEP.cpp  SymbRegEvalOpGEP.h  main.cpp
examples/GEPSymbReg/data/: funkcija1.txt
examples/GEPSymbReg/utility/: expression_evaluation.cpp  expression_evaluation.h  fileparser.cpp  fileparser.h  measures.cpp  measures.h  utility.cpp  utility.h
(+62 files in other folders)
